--- a/src/assets/plugins/bootstrap/css/bootstrap.css
+++ b/src/assets/plugins/bootstrap/css/bootstrap.css
@@ -2572,6 +2572,20 @@ textarea.form-control-lg {
   border: 1px solid #ced4da;
   border-radius: 0.375rem;
 }
+.input-group-text-search {
+  display: flex;
+  align-items: center;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 700;
+  line-height: 1.5;
+  color: #212529;
+  text-align: center;
+  white-space: nowrap;
+  background-color: #e9ecef;
+  border: 1px solid #ced4da;
+  border-radius: 0.375rem;
+}
 
 .input-group-lg > .form-control,
 .input-group-lg > .form-select,
