--- a/src/assets/css/admin.css
+++ b/src/assets/css/admin.css
@@ -3209,6 +3209,13 @@ html.menu-opened body {
 .profile-menu .nav-tabs.nav-tabs-solid {
   background-color: transparent;
 }
+
+.profile-new {
+  font-size: 2em;
+  font-weight: bold;
+  color: #333; /* Ubah warna sesuai keinginan */
+}
+
 .cal-icon {
   position: relative;
   width: 100%;
@@ -3365,7 +3372,7 @@ html.menu-opened body {
   justify-content: center;
 }
 .sidebar-logo img {
-  max-height: 46px;
+  max-height: 80px;
   width: auto;
 }
 .location-set {
