--- a/src/assets/css/admin.css
+++ b/src/assets/css/admin.css
@@ -10771,6 +10771,63 @@ fieldset {
   }
 }
 
+.choose-signup {
+	background: #fff;
+	border: 2px solid #F5F5F5;
+	border-radius: 10px;
+	padding: 25px;
+	text-align: center;
+	transition: ease all 0.5s;
+    -webkit-transition: ease all 0.5s;
+    -ms-transition: ease all 0.5s;
+}
+.choose-signup h6 {
+	font-size: 20px;
+	font-weight: 500;
+	margin-bottom: 15px;
+}
+.choose-signup p {
+	font-size: 12px;
+	margin-bottom: 17px;
+}
+.choose-signup .btn {
+	width: 100%;
+	font-size: 14px;
+	font-weight: 500;
+	padding: 10px;
+	border-radius: 4px;
+	display: -webkit-inline-box;
+	display: -ms-inline-flexbox;
+	display: inline-flex;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	justify-content: center;
+}
+.choose-signup:hover {
+	border: 2px solid #4c40ed;
+}
+.choose-signup .btn:hover {
+	background: #4c40ed;
+	color: #fff;
+	box-shadow: inset 0 0 0 0 #fff;
+}
+.choose-signup:hover .btn {
+	background: #4c40ed;
+	color: #fff;
+}
+.choose-img {
+	margin-bottom: 16px;	
+}
+.choose-img img {
+	border-radius: 50%;
+	width: 122px;
+	height: 122px;
+}
+.choose-signup:hover .btn img {
+	filter: brightness(0) invert(1);
+}
+
 @media only screen and (max-width: 575.98px) {
   .main-wrapper > .header {
     right: 0;
