--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -11355,6 +11355,25 @@ fieldset {
 .post-info {
 	margin-left: 95px;
 }
+.post-info-tes {
+	margin-left: 20px;
+}
+.post-info-tes h4 {
+	font-size: 16px;
+	font-weight: 500;
+	margin: 0;
+}
+.post-info-tes h4 a {
+	color: #28283C;
+}
+.post-info-tes h4 a:hover {
+	color: #4c40ed;
+}
+.post-info-tes p {
+	color: #71717A;
+	font-size: 13px;
+	margin-bottom: 7px;
+}
 .post-info h4 {
 	font-size: 16px;
 	font-weight: 500;
